[gd_scene load_steps=3 format=3 uid="uid://bov6hi1kghpi0"]

[ext_resource type="Script" uid="uid://qo8fq1pfog8w" path="res://Scripts/balloon_poper.gd" id="1_76ppj"]
[ext_resource type="PackedScene" uid="uid://dymlyg24lxm8k" path="res://Scenes/balloon.tscn" id="2_28qas"]

[node name="BalloonPoper" type="Node2D"]
script = ExtResource("1_76ppj")
balloon_scene = ExtResource("2_28qas")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Balloons" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="LivesLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0

[node name="RestartButton" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
